Change to gtest

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: cpp
 before_script:
-- sudo apt-get install libboost-test-dev -y
+- sudo apt-get install libgtest-dev
+- cd /usr/src/gtest
+- sudo cmake CMakeLists.txt
+- sudo make
+- sudo cp *.a /usr/lib
 script:
 - cmake .
 - cmake --build .
