--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ before_script:
 - sudo make
 - sudo cp *.a /usr/lib
 script:
-- cmake .
-- cmake --build .
-- cmake --build . --target test
-- cmake --build . --target package
+- sudo cmake .
+- sudo cmake --build .
+- sudo cmake --build . --target test
+- sudo cmake --build . --target package
 deploy:
   provider: script
   skip_cleanup: true
