--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 
 project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
-
-find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+#project(helloworld VERSION 0.0.0)
 
 configure_file(version.h.in version.h)
 
@@ -10,25 +9,22 @@ add_executable(helloworld_cli main.cpp)
 
 add_library(helloworld lib.cpp)
 
-add_executable(test_version test_version.cpp)
-
 set_target_properties(helloworld_cli helloworld test_version PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
     COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
 )
 
-set_target_properties(test_version PROPERTIES
-    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-)
-
 target_link_libraries(helloworld_cli
     helloworld
 )
 
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS}) 
+add_executable(test_version test_version.cpp)
+
 target_link_libraries(test_version
-    ${Boost_LIBRARIES}
+	${GTEST_LIBRARIES}
     helloworld
 )
 
