--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,20 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
-#project(helloworld VERSION 0.0.0)
+if(DEFINED $ENV{TRAVIS_BUILD_NUMBER})
+	project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+else()
+	project(helloworld VERSION 0.0.1)
+endif()
 
 configure_file(version.h.in version.h)
 
 add_executable(helloworld_cli main.cpp)
 
 add_library(helloworld lib.cpp)
+
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
+add_executable(test_version test_version.cpp)
 
 set_target_properties(helloworld_cli helloworld test_version PROPERTIES
     CXX_STANDARD 14
@@ -19,13 +26,9 @@ target_link_libraries(helloworld_cli
     helloworld
 )
 
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS}) 
-add_executable(test_version test_version.cpp)
-
 target_link_libraries(test_version
-	${GTEST_LIBRARIES}
-    helloworld
+	${GTEST_BOTH_LIBRARIES}
+   	pthread helloworld 
 )
 
 install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
