update gtest version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: cpp
 before_script:
+- echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
+- sudo apt-get update -qq
 - sudo apt-get install libgtest-dev cmake -y
 - cd /usr/src/gtest
 - sudo cmake . 
