--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
 
-if(DEFINED $ENV{TRAVIS_BUILD_NUMBER})
+#if(DEFINED $ENV{TRAVIS_BUILD_NUMBER})
+
 	project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
-else()
-	project(helloworld VERSION 0.0.1)
-endif()
+	
+#else()
+	#project(helloworld VERSION 0.0.1)
+#endif()
 
 configure_file(version.h.in version.h)
 
